# realsense-ros-alignEdge

./: .gitignore  README.md
camera_edge/: CMakeLists.txt  package.xml
camera_edge/include/camera_edge/: edge_detect.hpp
camera_edge/launch/: camera_edge.launch.py  default.rviz
camera_edge/src/: edge_detect.cpp
